fix style: h3 font size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>FizzBuzzDom</h1>
+        <h1>FizzBuzzDOM</h1>
         <div class="row">
 
         </div>
